--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
           python-version: "3.10"
       - name: Starting the unit_tests
         run:
-          python.exe -m unittest unit_tests.py
+          python -m unit_tests
 
   for_windows:
     runs-on: windows-latest
@@ -28,4 +28,4 @@ jobs:
           python-version: "3.10"
       - name: Starting the unit_tests
         run:
-          python.exe -m unittest unit_tests.py
+          python -m unit_tests
